After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764729 - Fix "format not a string literal" error
Fix "format not a string literal" error
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2016-04-07 13:43 UTC by Bastien Nocera
Modified: 2016-04-08 09:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media-keys: Fix "format not a string literal" error (2.23 KB, patch)
2016-04-07 13:43 UTC, Bastien Nocera
committed Details | Review
wacom: Fix "format not a string literal" error (2.19 KB, patch)
2016-04-07 13:43 UTC, Bastien Nocera
committed Details | Review
print-notification: Fix "format not a string literal" error (8.68 KB, patch)
2016-04-07 14:52 UTC, Felipe Borges
committed Details | Review

Description Bastien Nocera 2016-04-07 13:43:26 UTC
.
Comment 1 Bastien Nocera 2016-04-07 13:43:29 UTC
Created attachment 325540 [details] [review]
media-keys: Fix "format not a string literal" error
Comment 2 Bastien Nocera 2016-04-07 13:43:37 UTC
Created attachment 325541 [details] [review]
wacom: Fix "format not a string literal" error

And remove extra argument to the formatting function that we wouldn't
have been able to catch before.
Comment 3 Felipe Borges 2016-04-07 14:52:27 UTC
Created attachment 325543 [details] [review]
print-notification: Fix "format not a string literal" error
Comment 4 Bastien Nocera 2016-04-07 15:26:15 UTC
Review of attachment 325543 [details] [review]:

Sanity checked, looks good. Please cherry-pick in gnome-3-20 as well.
Comment 5 Bastien Nocera 2016-04-08 09:33:40 UTC
Attachment 325540 [details] pushed as 10dcf73 - media-keys: Fix "format not a string literal" error
Attachment 325541 [details] pushed as 14dde92 - wacom: Fix "format not a string literal" error
Attachment 325543 [details] pushed as d96e3e9 - print-notification: Fix "format not a string literal" error